--- a/style.css
+++ b/style.css
@@ -132,7 +132,9 @@
     padding-bottom: .4rem;
 }
 
-
+.card{
+    height: 100%;
+}
 
 @media only screen and (max-width: 991px) {
     .centerMeMobile{
