--- a/style.css
+++ b/style.css
@@ -136,6 +136,12 @@
     height: 100%;
 }
 
+/* portfolio images */
+
+.portfolioContent .card-img-top {
+    height: 300px; /* Adjust the height as needed */
+    object-fit: cover;
+}
 @media only screen and (max-width: 991px) {
     .centerMeMobile{
         display: block;
