Changed Services to Skills

--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@
 }
 
 /* spacing on all sections */
-#about, #services, #portfolio, #contact {
+#about, #skills, #portfolio, #contact {
     margin-top: 4rem;
     padding-top: 4rem;
 }
